@@ -1,3 +1,7 @@
+2007-04-30  Alan Modra  <amodra@bigpond.net.au>
+
+	* bfdlink.h (struct bfd_link_info): Add "info" and "minfo".
+
 2007-04-25  Mark Mitchell  <mark@codesourcery.com>
 
 	* demangle.h: Change license to LGPL + exception.
